syntax = "proto3";

package api.comment.v1;

option go_package = "comment-main/api/comment/v1;v1";
option java_multiple_files = true;
option java_package = "api.comment.v1";

import "google/api/annotations.proto";

service Comment {
	rpc CreateComment (CreateCommentRequest) returns (CreateCommentReply){
		option (google.api.http) = {
			put: "/api/reply/add",
			body: "*",
		};
	};
	rpc UpdateComment (UpdateCommentRequest) returns (UpdateCommentReply){

	};
	rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentReply);
	rpc GetComment (GetCommentRequest) returns (GetCommentReply);
	rpc ListComment (ListCommentRequest) returns (ListCommentReply){
		option (google.api.http) = {
			post: "/api/reply/main",
			body: "*",
		};
	};
}

message CreateCommentRequest {
	int64 oid = 1;
	int32 type = 2;
	string message = 3;
	int64 parent = 4;
	int64 root = 5;
	string at = 6;
	int32 plat = 7;
	string device = 8;
	int32 code = 9;
	int64 vote = 10;
	int64 lottery = 11;
	string csrf_token = 12;
	string goods_item_id = 13;
	string from = 14;
	int64 activity_id = 15;
	int32 is_new_activity = 16;
}
message CreateCommentReply {
	int32 code = 1;
	string message = 2;
	int64 ttl = 3;
	message data{
		string success_toast = 1;
		bool change_nickname_prompt = 2;
		int32 success_action = 3;
		string url = 4;
		string urlv2 = 5;
		int64 rpid = 6;
		string rpid_str = 7;
		int64 dialog = 8;
		string dialog_str = 9;
		int64 root = 10;
		string root_str = 11;
		int64 parent = 12;
		string parent_str = 13;
		bool need_captcha_v2 = 14;
	}
}

message UpdateCommentRequest {}
message UpdateCommentReply {}

message DeleteCommentRequest {}
message DeleteCommentReply {}

message GetCommentRequest {}
message GetCommentReply {}

message ListCommentRequest {
	int64  oid = 1;
	int32 type = 2;
	int64 mode = 3;
	int64 next = 4;
	int64 prev = 5;
	int64 extrs = 6;
}
message hots{

}
message replies{

}
message ListCommentReply {
	int32 code = 1;
	message data{
		message cursor{}
		message control{}
		message  notice{}
		message top{}
		message folder{}
		int32 assist = 3;
		int32 blacklist = 4;
		int32 vote = 5;
		int32 lottery = 6;
		message lottery_card{}
		message config{}
		message upper{}
		int64 activity_id = 7;
		int32 activity = 8;
		int32 activity_state = 9;
		string activity_placeholder = 10;
		message up_selection{}
		message cm{}
	}


}